# Tapir-LLVM

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.TXT  LLVMBuild.cmake  Makefile.config  Makefile.llvmbuild  README.md  compile  config.status  llvm.spec  test.c  test.ll  test2.ll
.circleci/: config.yml
.circleci/1804/: dockerfile
.github/workflows/: tapir-macos.yml  tapir-ubuntu.yml
898/sync_elimination_pfor_mb/: main.c  makefile
cmake/modules/: LLVMBuildExports.cmake  LLVMConfig.cmake  LLVMConfigVersion.cmake  LLVMExports.cmake
docs/: ReleaseNotes.rst  doxygen.cfg  index.rst
include/llvm/: InitializePasses.h  LinkAllPasses.h
include/llvm-c/: Core.h  Initialization.h
lib/Analysis/: AliasAnalysis.cpp  AliasSetTracker.cpp  Analysis.cpp  CMakeLists.txt  CaptureTracking.cpp  CodeMetrics.cpp  DependenceAnalysis.cpp  LoopAccessAnalysis.cpp  LoopAnalysisManager.cpp  LoopInfo.cpp  LoopPass.cpp  MemoryBuiltins.cpp  MemoryDependenceAnalysis.cpp  MemoryLocation.cpp  MemorySSA.cpp  (+6 more)
lib/Transforms/Tapir/: ._GPUNodeBuilder.inl  ._MustKillsInfo.inl  ._ParallelPollySchedule.cpp  AnalyzeTapir.cpp  CMakeLists.txt  CilkABI.cpp  CilkRABI.cpp  CilkRTSCilkFor.cpp  Detach2Cilk.cpp  DetachUnswitch.cpp  DougiePass.cpp  GPUNodeBuilder.inl  Loop2Cilk.cpp  LoopSpawning.cpp  LoopSpawningTI.cpp  LoopStripMine.cpp  LowerToCilk.cpp  LoweringUtils.cpp  MustKillsInfo.inl  NestedDetachMotion.cpp  OpenMPABI.cpp  Outline.cpp  PTXABI.cpp  ParallelPollySchedule.cpp  QthreadsABI.cpp  SerialABI.cpp  SmallBlock.cpp  SpawnMerging.cpp  SpawnRestructure.cpp  SpawnUnswitch.cpp  SyncElimination.cpp  Tapir.cpp  TapirLoopInfo.cpp  TapirOutline.cpp  TapirToTarget.cpp  TapirUtils.cpp
microbenchmarks/: common.h  run.sh
reducertest/: intsummod.ll
tmp/: Makefile  l.cpp  llvm.cpp
(+339 files in other folders)
